--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,13 +12,13 @@ theme:
       toggle:
         icon: material/toggle-switch-off-outline
         name: Switch to dark mode
-      primary: teal
+      primary: green
       accent: purple
     - scheme: slate
       toggle:
         icon: material/toggle-switch
         name: Switch to light mode
-      primary: teal
+      primary: blue
       accent: lime
   features:
     - navigation.tabs
