note banner with mkdocs format

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,4 +41,8 @@ plugins:
       type: date
   - mike
   - macros
-  
+
+markdown_extensions:
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
