--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: UPSCb Common Documentation
+site_name: How to Build and Host Documentation
 site_url: https://sagar-umu.github.io/UPSCb-common-docu/
 
 docs_dir: docs
